fix: broken path
feat: update keybinding for file manager

--- a/configs/.config/hypr/keybindings.conf
+++ b/configs/.config/hypr/keybindings.conf
@@ -7,7 +7,7 @@ $mainMod = SUPER # windows key
 # assign apps
 $term = kitty
 $editor = code
-$file = memo
+$file = dolphin
 $browser = firefox
 
 # Window/Session actions
