--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -1,6 +1,5 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-# monitor = eDP-1, 1920x1080@60, 0x0, 1
 monitor = ,preferred,auto,auto
 
 
@@ -14,9 +13,9 @@ exec-once = dbus-update-activation-environment --systemd --all # for XDPH
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication dialogue for GUI apps
 exec-once = waybar # launch the system panel
+exec-once = hyprpaper # launch the wallpaper
 exec-once = blueman-applet # systray app for BT
 exec-once = nm-applet --indicator # systray app for Network/Wifi
-exec-once = dunst # start notification demon
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 
@@ -47,7 +46,7 @@ input {
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = no
+        natural_scroll = yes
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -94,3 +93,5 @@ misc {
 source = ~/.config/hypr/animations.conf
 source = ~/.config/hypr/keybindings.conf
 source = ~/.config/hypr/windowrules.conf
+source = ~/.config/hypr/themes/common.conf
+source = ~/.config/hypr/themes/theme.conf
