--- a/configs/.config/hypr/keybindings.conf
+++ b/configs/.config/hypr/keybindings.conf
@@ -7,28 +7,30 @@ $mainMod = SUPER # windows key
 # assign apps
 $term = kitty
 $editor = code
-$file = dolphin
-$browser = firefox
+$file = nemo
+$browser = brave
 
 # Window/Session actions
-bind = $mainMod, Q, exec, hyprctl dispatch killactive "" # killactive, kill the window on focus
-bind = ALT, F4, exec, hyprctl dispatch killactive ""     # killactive, kill the window on focus
-bind = $mainMod, W, togglefloating,                      # toggle the window on focus to float
-bind = $mainMod, G, togglegroup,                         # toggle the window on focus to float
-bind = ALT, return, fullscreen,                          # toggle the window on focus to fullscreen
-bind = $mainMod, L, exec, swaylock                       # lock screen
-bind = $mainMod, backspace, exec, wlogout                # logout menu
+bind = $mainMod, Q, exec, hyprctl dispatch killactive ""                 # killactive, kill the window on focus
+bind = ALT, F4, exec, hyprctl dispatch killactive ""                     # killactive, kill the window on focus
+bind = $mainMod, W, togglefloating,                                      # toggle the window on focus to float
+bind = $mainMod, G, togglegroup,                                         # toggle the window on focus to float
+bind = ALT, return, fullscreen,                                          # toggle the window on focus to fullscreen
+bind = $mainMod, L, exec, swaylock                                       # lock screen
+bind = $mainMod, backspace, exec, ~/.config/hypr/scripts/logoutlaunch.sh # logout menu
+bind = $CONTROL, ESCAPE, exec, killall waybar || waybar                  # toggle waybar
 
 # Application shortcuts
-bind = $mainMod, T, exec, $term    # open terminal
-bind = $mainMod, E, exec, $file    # open file manager
-bind = $mainMod, C, exec, $editor  # open vscode
-bind = $mainMod, F, exec, $browser # open browser
+bind = $mainMod, T, exec, $term                                             # open terminal
+bind = $mainMod, E, exec, $file                                             # open file manager
+bind = $mainMod, C, exec, $editor                                           # open vscode
+bind = $mainMod, F, exec, $browser                                          # open browser
+bind = $CONTROL SHIFT, ESCAPE, exec, ~/.config/hypr/scripts/sysmonlaunch.sh # open htop/btop if installed or default to top (system monitor)
 
 # Rofi is toggled on/off if you repeat the key presses
-bind = $mainMod, A, exec, pkill -x rofi || rofi -show drun        # launch desktop applications
-bind = $mainMod, tab, exec, pkill -x rofi || rofi -show window    # switch between desktop applications
-bind = $mainMod, R, exec, pkill -x rofi || rofi -show filebrowser # browse system files
+bind = $mainMod, A, exec, pkill -x rofi || ~/.config/hypr/scripts/rofilaunch.sh d   # launch desktop applications
+bind = $mainMod, tab, exec, pkill -x rofi || ~/.config/hypr/scripts/rofilaunch.sh w # switch between desktop applications
+bind = $mainMod, R, exec, pkill -x rofi || ~/.config/hypr/scripts/rofilaunch.sh f   # browse system files
 
 # Audio control
 bind = , XF86AudioMute, exec, ~/.config/hypr/scripts/volumecontrol.sh -o m         # toggle audio mute
@@ -48,6 +50,9 @@ binde = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/brightnesscontrol.
 bind = $mainMod, P, exec, ~/.config/hypr/scripts/screenshot.sh s     # drag to snip an area / click on a window to print it
 bind = $mainMod ALT, P, exec, ~/.config/hypr/scripts/screenshot.sh m # print focused monitor
 bind = ,print, exec, ~/.config/hypr/scripts/screenshot.sh p          # print all monitor outputs
+
+# Exec custom scripts
+bind = $mainMod, V, exec, pkill -x rofi || ~/.config/hypr/scripts/cliphist.sh c # open Pasteboard in screen center
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
