feat: add `dunst`
fix: broken `waybar` icons

chore: remove old package

--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -14,6 +14,7 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication dialogue for GUI apps
 exec-once = waybar # launch the system panel
 exec-once = hyprpaper # launch the wallpaper
+exec-once = dunst # start notifincation deamon
 exec-once = blueman-applet # systray app for BT
 exec-once = nm-applet --indicator # systray app for Network/Wifi
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
