feat: update window rule

--- a/configs/.config/hypr/windowrules.conf
+++ b/configs/.config/hypr/windowrules.conf
@@ -4,9 +4,12 @@
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
+windowrulev2 = center 1,class:^(engrampa)$
+windowrulev2 = size 50%,class:^(engrampa)$
+
 windowrulev2 = float,class:^(qt5ct)$
 windowrulev2 = float,class:^(nwg-look)$
-windowrulev2 = float,class:^(org.kde.ark)$
+windowrulev2 = float,class:^(engrampa)$
 windowrulev2 = float,class:^(pavucontrol)$
 windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(nm-applet)$
