feat: update default font
fix: `nemo-git` to `nemo`

chore: update script

--- a/configs/.config/qt5ct/qt5ct.conf
+++ b/configs/.config/qt5ct/qt5ct.conf
@@ -7,7 +7,7 @@ style=kvantum
 
 [Fonts]
 fixed="JetBrainsMono NF,10,-1,5,50,0,0,0,0,0,Regular"
-general="Inter,10,-1,5,50,0,0,0,0,0,Regular"
+general="Noto Sans,10,-1,5,50,0,0,0,0,0,Regular"
 
 [Interface]
 activate_item_on_single_click=1
