--- a/configs/.config/gtk-3.0/settings.ini
+++ b/configs/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Catppuccin-Mocha
 gtk-icon-theme-name=Tela-circle-dracula
-gtk-font-name=Inter 10
+gtk-font-name=Noto Sans 10
 gtk-cursor-theme-name=Bibata-Modern-Ice
 gtk-cursor-theme-size=20
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
