--- a/configs/.config/hypr/themes/common.conf
+++ b/configs/.config/hypr/themes/common.conf
@@ -2,8 +2,8 @@ exec = hyprctl setcursor Bibata-Modern-Ice 20
 exec = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
 exec = gsettings set org.gnome.desktop.interface cursor-size 20
 
-exec = gsettings set org.gnome.desktop.interface font-name 'Inter 10'
-exec = gsettings set org.gnome.desktop.interface document-font-name 'Inter 10'
+exec = gsettings set org.gnome.desktop.interface font-name 'Noto Sans 10'
+exec = gsettings set org.gnome.desktop.interface document-font-name 'Noto Sans 10'
 exec = gsettings set org.gnome.desktop.interface monospace-font-name 'JetBrainsMono NF 10'
 exec = gsettings set org.gnome.desktop.interface font-antialiasing 'rgba'
 exec = gsettings set org.gnome.desktop.interface font-hinting 'full'
