feat: update `vscode` setting

--- a/configs/.config/Code/User/settings.json
+++ b/configs/.config/Code/User/settings.json
@@ -1,15 +1,21 @@
 {
-    "workbench.tree.indent": 20,
-    "editor.formatOnSave": true,
-    "editor.fontFamily": "JetBrainsMono NF",
+    "editor.fontFamily": "'JetBrainsMono NF', 'monospace', monospace",
+    "terminal.integrated.fontFamily": "'JetBrainsMono NF', 'monospace', monospace",
+    "editor.lineHeight": 2,
     "editor.fontLigatures": true,
-    "terminal.integrated.fontFamily": "JetBrainsMono NF",
-    "editor.lineHeight": 1.6,
+    "files.trimTrailingWhitespace": true,
+    "editor.cursorBlinking": "phase",
     "editor.renderWhitespace": "boundary",
-    "window.menuBarVisibility": "toggle",
-    "editor.minimap.enabled": false,
-    "telemetry.telemetryLevel": "off",
-    "terminal.external.linuxExec": "kitty",
+    "editor.smoothScrolling": true,
     "editor.cursorSmoothCaretAnimation": "on",
-    "editor.smoothScrolling": true
+    "breadcrumbs.enabled": false,
+    "editor.minimap.enabled": false,
+    "workbench.editor.enablePreview": false,
+    "editor.guides.bracketPairs": true,
+    "editor.guides.highlightActiveIndentation": true,
+    "editor.guides.bracketPairsHorizontal": "active",
+    "files.autoSave": "onFocusChange",
+    "editor.formatOnSave": true,
+    "terminal.external.linuxExec": "kitty",
+    "window.menuBarVisibility": "toggle"
 }
