--- a/configs/.config/kitty/themes/theme.conf
+++ b/configs/.config/kitty/themes/theme.conf
@@ -1,28 +1,30 @@
 # vim:ft=kitty
 
-## name:     Catppuccin Mocha 🌿
-## author:   Pocco81 (https://github.com/Pocco81)
+## name:     Catppuccin Kitty Mocha
+## author:   Catppuccin Org
 ## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/mocha.conf
+## upstream: https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
 
+
+
 # The basic colors
-foreground           #CDD6F4
-background           #1E1E2E
-selection_foreground #1E1E2E
-selection_background #F5E0DC
+foreground              #CDD6F4
+background              #1E1E2E
+selection_foreground    #1E1E2E
+selection_background    #F5E0DC
 
 # Cursor colors
-cursor            #F5E0DC
-cursor_text_color #1E1E2E
+cursor                  #F5E0DC
+cursor_text_color       #1E1E2E
 
 # URL underline color when hovering with mouse
-url_color #B4BEFE
+url_color               #F5E0DC
 
 # Kitty window border colors
-active_border_color   #CBA6F7
-inactive_border_color #8E95B3
-bell_border_color     #EBA0AC
+active_border_color     #B4BEFE
+inactive_border_color   #6C7086
+bell_border_color       #F9E2AF
 
 # OS Window titlebar colors
 wayland_titlebar_color system
@@ -37,7 +39,7 @@ tab_bar_background      #11111B
 
 # Colors for marks (marked text in the terminal)
 mark1_foreground #1E1E2E
-mark1_background #87B0F9
+mark1_background #B4BEFE
 mark2_foreground #1E1E2E
 mark2_background #CBA6F7
 mark3_foreground #1E1E2E
@@ -46,8 +48,8 @@ mark3_background #74C7EC
 # The 16 terminal colors
 
 # black
-color0 #43465A
-color8 #43465A
+color0 #45475A
+color8 #585B70
 
 # red
 color1 #F38BA8
@@ -62,8 +64,8 @@ color3  #F9E2AF
 color11 #F9E2AF
 
 # blue
-color4  #87B0F9
-color12 #87B0F9
+color4  #89B4FA
+color12 #89B4FA
 
 # magenta
 color5  #F5C2E7
@@ -74,5 +76,5 @@ color6  #94E2D5
 color14 #94E2D5
 
 # white
-color7  #CDD6F4
-color15 #A1A8C9
+color7  #BAC2DE
+color15 #A6ADC8
