chore: update outdated package

--- a/configs/.config/hypr/themes/theme.conf
+++ b/configs/.config/hypr/themes/theme.conf
@@ -19,17 +19,24 @@ group {
     col.border_locked_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
 }
 
+group {
+    col.border_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
+    col.border_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
+    col.border_locked_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
+    col.border_locked_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
+}
+
 decoration {
-    rounding = 10
+    rounding = 0
     drop_shadow = false
 
     blur {
         enabled = yes
-        size = 6
-        passes = 3
+        size = 8
+        passes = 4
         new_optimizations = on
         ignore_opacity = on
-        xray = false
+        xray = true
     }
 }
 
