--- a/configs/.config/hypr/windowrules.conf
+++ b/configs/.config/hypr/windowrules.conf
@@ -6,14 +6,5 @@
 
 windowrulev2 = center 1,class:^(engrampa)$
 windowrulev2 = size 50%,class:^(engrampa)$
-windowrulev2 = opacity 0.90 0.90,class:^(Code)$
-windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
 
-windowrulev2 = float,class:^(qt5ct)$
-windowrulev2 = float,class:^(nwg-look)$
-windowrulev2 = float,class:^(engrampa)$
-windowrulev2 = float,class:^(pavucontrol)$
-windowrulev2 = float,class:^(blueman-manager)$
-windowrulev2 = float,class:^(nm-applet)$
-windowrulev2 = float,class:^(nm-connection-editor)$
-windowrulev2 = float,class:^(polkit-mate-authentication-agent-1)$
+windowrulev2 = float,class:^(qt5ct|nwg-look|engrampa|pavucontrol|blueman-manager|nm-applet|nm-connection-editor|polkit-mate-authentication-agent-1)$
