--- a/configs/.config/hypr/hyprpaper.conf
+++ b/configs/.config/hypr/hyprpaper.conf
@@ -1,3 +1,5 @@
-preload = ~/.config/hypr/themes/ow.png
+preload = ~/.config/hypr/themes/wallpaper.png
 
-wallpaper = ,~/.config/hypr/themes/ow.png
+wallpaper = ,~/.config/hypr/themes/wallpaper.png
+
+splash = false
