--- a/configs/.config/hypr/themes/theme.conf
+++ b/configs/.config/hypr/themes/theme.conf
@@ -34,10 +34,7 @@ decoration {
         enabled = yes
         size = 8
         passes = 4
-        new_optimizations = on
-        ignore_opacity = on
-        xray = true
     }
 }
 
-blurls = waybar
+layerrule = blur,waybar
